--- a/rsome_paper_doc.ipynb
+++ b/rsome_paper_doc.ipynb
@@ -704,7 +704,7 @@
     "model.st(y >= x.sum(axis=0) - d, y >= 0)    # robust constraints\n",
     "model.st(x.sum(axis=1) <= q, x >= 0)        # deterministic constraints\n",
     "\n",
-    "model.solve(eco)                            # solve the model with Gurobi"
+    "model.solve(eco)                            # solve the model with ECOS"
    ]
   },
   {
