--- a/rsome_paper_doc.ipynb
+++ b/rsome_paper_doc.ipynb
@@ -689,7 +689,7 @@
    ],
    "source": [
     "from rsome import ro                        # import the ro module\n",
-    "from rsome import eco_solver as eco         # import the Gurobi interface\n",
+    "from rsome import eco_solver as eco         # import the ECOS interface\n",
     "\n",
     "model = ro.Model()                          # create an RO model\n",
     "\n",
@@ -704,7 +704,7 @@
     "model.st(y >= x.sum(axis=0) - d, y >= 0)    # robust constraints\n",
     "model.st(x.sum(axis=1) <= q, x >= 0)        # deterministic constraints\n",
     "\n",
-    "model.solve(eco)                            # solve the model with ECOS"
+    "model.solve(eco)                            # solve the model by ECOS"
    ]
   },
   {
@@ -868,7 +868,7 @@
    "source": [
     "from rsome import ro                                    # import the ro module\n",
     "from rsome import norm                                  # import the norm function\n",
-    "from rsome import eco_solver as eco                     # import the Gurobi interface\n",
+    "from rsome import eco_solver as eco                     # import the ECOS interface\n",
     "\n",
     "epsilon = 0.25                                          # parameter of robustness\n",
     "model = ro.Model()                                      # create an RO model\n",
@@ -888,7 +888,7 @@
     "    model.st((y[s] >= 0).forall(zset))                  # constraints for the sth sample\n",
     "model.st(x.sum(axis=1) <= q, x >= 0)                    # constraints\n",
     "\n",
-    "model.solve(eco)                                        # solve the model by Gruobi"
+    "model.solve(eco)                                        # solve the model by ECOS"
    ]
   },
   {
@@ -1042,7 +1042,7 @@
     "from rsome import dro                               # import the dro module\n",
     "from rsome import norm                              # import the norm function\n",
     "from rsome import E                                 # import the expectation notion\n",
-    "from rsome import eco_solver as eco                 # import the Gurobi interface\n",
+    "from rsome import eco_solver as eco                 # import the ECOS interface\n",
     "\n",
     "epsilon = 0.25                                      # parameter of robustness\n",
     "w = 1/S                                             # weight of each scenario\n",
@@ -1066,7 +1066,7 @@
     "model.st(y >= x.sum(axis=0) - d, y >= 0)            # robust constraints\n",
     "model.st(x.sum(axis=1) <= q, x >= 0)                # deterministic constraints\n",
     "\n",
-    "model.solve(eco)                                    # solve the model by Gruobi"
+    "model.solve(eco)                                    # solve the model by ECOS"
    ]
   },
   {
@@ -1348,7 +1348,7 @@
     "from rsome import dro                         # import the dro module\n",
     "from rsome import square                      # import the element-wise square function\n",
     "from rsome import E                           # import the notion of expectation\n",
-    "from rsome import eco_solver as eco           # import the Gurobi interface\n",
+    "from rsome import eco_solver as eco           # import the ECOS interface\n",
     "\n",
     "S = len(w)                                    # number of scenarios\n",
     "model = dro.Model(S)                          # create a DRO model with S scenarios\n",
@@ -1376,7 +1376,7 @@
     "model.st(y >= x.sum(axis=0) - d, y >= 0)      # robust constraints\n",
     "model.st(x >= 0, x.sum(axis=0) <= q)          # deterministic constraints\n",
     "\n",
-    "model.solve(eco)                              # solve the model by Gurobi\n",
+    "model.solve(eco)                              # solve the model by ECOS\n",
     "status = model.solution.status                # return the solution status\n",
     "time = model.solution.time                    # return the solution time\n",
     "objval = model.get()                          # get the optimal objective value\n",
